tests/error/while.moc
void main() {
    int x = 0;

    while('a') {
        x = x + 1;
    }
}
